--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "email": "pavel@asdf404.net"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
